--- a/PS2_Czapran_Ellero_Porta_Tan.tex
+++ b/PS2_Czapran_Ellero_Porta_Tan.tex
@@ -241,8 +241,7 @@ Now we can substitute this result back into the budget constraint giving us
     p_1 \left( \frac{p_2(2-c_2)}{2p_1} + 1 \right) + p_2 c_2 = w
     \implies c_2 = \frac{2(w - p_1 - p_2)}{p_2}
 \end{equation}
-
-By combining these results we get
+and by substituting the value of $c_2$ back into $c_1$ we get the desired result:
 \begin{equation}
     \begin{cases}
         d_1(w, p) = c_1 = 2 - \frac{w - 2p_2}{p_1} \\
